mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/historial_clinico__c.object-meta.xml
<CustomObject>
    <label>Historial Clínico</label>
    <nameField>
        <label>Historial Clínico Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historiales Clínicos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>