mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Enfermedad_c__c.field-meta.xml
<CustomField>
    <fullName>Enfermedad_c__c</fullName>
    <label>Enfermedad</label>
    <length>80</length>
    <type>Text</type>
</CustomField>