mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Estado_c__c.field-meta.xml
<CustomField>
    <fullName>Estado_c__c</fullName>
    <label>Estado del tratamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Suspendido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>