mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Fecha_Diagnostico_c__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Diagnostico_c__c</fullName>
    <label>Fecha de diagnóstico</label>
    <type>Date</type>
</CustomField>