mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Observaciones_c__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_c__c</fullName>
    <label>Observaciones médicas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>