mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Paciente_c__c.field-meta.xml
<CustomField>
    <fullName>Paciente_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paciente</label>
    <referenceTo>vita_paciente__c</referenceTo>
    <relationshipLabel>Historiales Clínicos</relationshipLabel>
    <relationshipName>historiales_clinicos</relationshipName>
    <type>Lookup</type>
</CustomField>