mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Pastillas_y_Dosis_c__c.field-meta.xml
<CustomField>
    <fullName>Pastillas_y_Dosis_c__c</fullName>
    <label>Pastillas y dosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>