mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Proxima_Revision_c__c.field-meta.xml
<CustomField>
    <fullName>Proxima_Revision_c__c</fullName>
    <label>Próxima revisión</label>
    <type>Date</type>
</CustomField>