mi-primer-proyecto/force-app/main/default/objects/historial_clinico__c/fields/Tratamiento_c__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento_c__c</fullName>
    <label>Tratamiento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>